--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KFC Online Order</title>
     <!-- <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.css">
-     Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+     Latest compiled and minified CSS 
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"> -->
 
     <!-- <link rel="stylesheet" href="./node_modules/bootstrap-icons/font/bootstrap-icons.css">
-     Bootstrap Icons -->
-<link rel="stylesheet" href="https://unpkg.com/bootstrap-icons@0.6.0/font/bootstrap-icons.css">
+     Bootstrap Icons 
+<link rel="stylesheet" href="https://unpkg.com/bootstrap-icons@0.6.0/font/bootstrap-icons.css"> -->
 
     <script src="./kfc.js"></script>
     <style>
